tests/baselines/reference/objectLiteralMemberWithoutBlock1.errors.txt
tests/cases/compiler/objectLiteralMemberWithoutBlock1.ts(1,16): error TS1005: '{' expected.


==== tests/cases/compiler/objectLiteralMemberWithoutBlock1.ts (1 errors) ====
    var v = { foo(); }
                   ~
!!! error TS1005: '{' expected.